k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: desafio-app
  namespace: desafio
  labels:
    app: desafio-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: desafio-app
  template:
    metadata:
      labels:
        app: desafio-app
    spec:
      containers:
        - name: desafio-app
          image: desafio
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 90
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 3
