k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: desafio-service
  namespace: desafio
spec:
  selector:
    app: desafio-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
