k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: desafio-ingress
  namespace: desafio
spec:
  ingressClassName: nginx
  rules:
    - host: desafio.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: desafio-service
                port:
                  number: 80
